test_files/fails/s_nonstable_value_in_boxed_closure1.ar
let rec foo = \f ->
    let g = box (\y -> f y) in
    delay ((unbox g) (adv (wait keyboard)) :: foo f);

console <- 0 :: foo (\n -> n);
